--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <style>
     body { font-family: sans-serif; padding: 1em; }
     input, select, textarea, button { width: 100%; margin-bottom: 0.5em; font-size: 1em; }
-    table { width: 100%; border-collapse: collapse; margin-top: 1em; }
+    table { border-collapse: collapse; margin-top: 1em; }
     th, td {    white-space: nowrap;
     width: 100px; border: 1px solid #ccc; padding: 4px; font-size: 0.9em; text-align: left; }
     .section { border: 1px solid #ddd; padding: 10px; margin-bottom: 1em; background: #f9f9f9; }
